--- a/QLCF.Blazor.Server/QLCF.Blazor.Server.csproj
+++ b/QLCF.Blazor.Server/QLCF.Blazor.Server.csproj
@@ -33,4 +33,12 @@
   <ItemGroup>
     <ProjectReference Include="..\QLCF.Module\QLCF.Module.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="UnusableNodes.xml">
+      <DependentUpon>Model.xafml</DependentUpon>
+    </None>
+    <None Update="UnusableNodes1.xml">
+      <DependentUpon>Model.xafml</DependentUpon>
+    </None>
+  </ItemGroup>
 </Project>
